# kaelum

./: .dockerignore  .env.example  .gitignore  ACTION_PLAN_PHASE_1.5.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  CHANGELOG.md  CLEANUP_COMPLETED.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  EXECUTION_PLAN_v1.5.md  FINETUNING_GUIDE.md  HYBRID_APPROACH_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PRODUCT_ANALYSIS.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_NEW.md  REFACTOR_PLAN.md  REFACTOR_SUMMARY.md  RELEASE_v1.0.0.md  SETUP.md  SETUP_GUIDE.md  STATUS.md  SYSTEM_DIAGRAM.md  TODO.md  VISION.md  __init__.py  benchmark.py  cli.py  cli_neural_router.py  demo_query.txt  diagram.excalidraw  docker-compose.yml  docker-run.sh  docker-shell.sh  docker-stop.sh  (+22 more)
app/: __init__.py  main.py
backend/: README.md  app.py  config.py  logging_config.py  metrics_utils.py  verify_cpu_mode.py
benchmarks/: gsm8k_benchmark.py
core/: __init__.py  adaptive_lats_config.py  adaptive_penalty.py  analysis_worker.py  cache_validator.py  code_extractor.py  code_worker.py  coherence_detector.py  completeness_detector.py  conclusion_detector.py  confidence_calibrator.py  config.py  creative_evaluator.py  creative_task_classifier.py  creative_worker.py  domain_classifier.py  factual_worker.py  language_detector.py  lats.py  meta_reasoner.py  metrics.py  neural_router.py  neural_router_trainer.py  paths.py  reasoning.py  reflection.py  registry.py  relevance_validator.py  repetition_detector.py  reward_model.py  router.py  router_policy.py  shared_encoder.py  sympy_engine.py  syntax_validator.py  task_classifier.py  threshold_calibrator.py  tools.py  tree_cache.py  verification.py  (+2 more)
docs/: HARDCODED_ISSUES.md  METRICS.md  NEURAL_ROUTER.md  ORCHESTRATOR.md  README.md  REFLECTION.md  ROUTING.md  VERIFICATION.md
examples/: README.md  demo_router.py  example_api.py  example_basic.py  quick_start.py  (+12 more)
(+161 files in other folders)
