[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kaelum*"]

[project]
name = "kaelum"
version = "0.1.0"
description = "The All-in-One Reasoning Layer for Agentic LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Ashworks", email = "ashworks1706@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "langchain>=0.1.6",
    "langchain-core>=0.1.23",
    "langchain-openai>=0.0.5",
    "sympy>=1.12",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.1",
    "numpy>=1.26.3",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.2.3",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
